// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot with all features 1`] = `
<div>
  <div>
    <label
      for="test-input"
      style="display: block; margin-bottom: 0.5rem; color: rgb(51, 65, 85);"
    >
      Username
      <span
        style="margin-left: 0.25rem;"
      >
        *
      </span>
    </label>
    <input
      id="test-input"
      required=""
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; font-size: 1rem; color: rgb(15, 23, 42); outline: none; transition: border-color 0.2s ease;"
      type="password"
      value=""
    />
    <p
      style="font-size: 0.875rem; margin-top: 0.25rem;"
    >
      This field is required
    </p>
  </div>
</div>
`;

exports[`Input matches snapshot with default props 1`] = `
<div>
  <div>
    <input
      id="test-input"
      style="width: 100%; padding: 0.75rem; border: 1px solid #cbd5e1; border-radius: 0.375rem; font-size: 1rem; color: rgb(15, 23, 42); outline: none; transition: border-color 0.2s ease;"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input matches snapshot with error state 1`] = `
<div>
  <div>
    <input
      id="test-input"
      style="width: 100%; padding: 0.75rem; border-radius: 0.375rem; font-size: 1rem; color: rgb(15, 23, 42); outline: none; transition: border-color 0.2s ease;"
      type="text"
      value=""
    />
    <p
      style="font-size: 0.875rem; margin-top: 0.25rem;"
    >
      This field is required
    </p>
  </div>
</div>
`;

exports[`Input matches snapshot with label and required indicator 1`] = `
<div>
  <div>
    <label
      for="test-input"
      style="display: block; margin-bottom: 0.5rem; color: rgb(51, 65, 85);"
    >
      Username
      <span
        style="margin-left: 0.25rem;"
      >
        *
      </span>
    </label>
    <input
      id="test-input"
      required=""
      style="width: 100%; padding: 0.75rem; border: 1px solid #cbd5e1; border-radius: 0.375rem; font-size: 1rem; color: rgb(15, 23, 42); outline: none; transition: border-color 0.2s ease;"
      type="text"
      value=""
    />
  </div>
</div>
`;
